docs/versions/1.5.0/_sources/source/userdoc/mesh_processing.rst.txt
Mesh Processing
===============

Introduction
------------

**SSCA** ``mesh_processing`` module contains a list of operators that can be applied to a given target, such as a StageHandler or PrimHandler.
These operators can be chained in any order to build relevant and adapted processing workflow.

In industries involving 3d content, assets need to be prepared to fit pipelines requirements.
With Operators like remeshing, decimation, mesh cleaning and even uv unwrap and repack **SSCA** provides the advantage to automatize asset optimization.




**Simple Example:**

.. code-block:: python

   from pathlib import Path
   from substance3d.api import scene, mesh_processing as mp
   
   # Path to the 3D file
   my_3d_file = Path("meshes/mesh_file.obj")

   # Build a scene from the 3D file
   scn = scene.load(my_3d_file)

   # Build a processing workflow (operators are configured via attributes)
   ops = [mp.DecimationOp(), mp.UnwrapOp()]

   # Run the workflow on the whole scene
   mp.process(scn, ops)

.. note::
    Operators process the given prim and its sub-tree.
    Run it on a Stagehandler to process all meshes of the scene.




CAD File Processing
-------------------
Lets see, step by step, now how to optimize CAD files like *.step* ones.

**1/ Build a scene from a CAD file**

.. code-block:: python

    from substance3d.api import scene, export, primitive, mesh_processing as mp
    from pathlib import Path
    
    # Path to the CAD file
    my_cad_file = Path("cad_input/my_cad_file.step")

    # Create a scene
    my_scene = scene.new()

    # Create a group to host the imported cad file
    mesh_group = primitive.xform(my_scene, "mesh_grp")

    # Import cad file and set the tessellation level at 'medium'.
    scene.add_reference(mesh_group, my_cad_file, prcTessLevel='medium')

.. note::
    
    At this point, it is important to remember that, for CAD files import, :ref:`prcTessLevel<File import parameters>` argument gives you the opportunity to set a tessellation level at import.
    CAD files tessellation level ('prcTessLevel') string arguments options are: **"extraLow", "low", "medium", "high", "extraHigh"**

    Here are some visual examples of the different tessellation levels:

.. image:: /source/static/mesh_processing/mp_cad_import_tesselation_extra_low.png
    :scale: 50 %
    :alt: extraLow
.. image:: /source/static/mesh_processing/mp_cad_import_tesselation_low.png
    :scale: 50 %
    :alt: low
.. image:: /source/static/mesh_processing/mp_cad_import_tesselation_medium.png
    :scale: 50 %
    :alt: medium
.. image:: /source/static/mesh_processing/mp_cad_import_tesselation_high.png
    :scale: 50 %
    :alt: high
.. image:: /source/static/mesh_processing/mp_cad_import_tesselation_extra_high.png
    :scale: 50 %
    :alt: extraHigh


**2/ Clean mesh and optimize it for further processing**

Now we have our StageHandler scene lets load some of the cleaning operators:

.. code-block:: python
    
    # Make sure vertices of every mesh are welded
    verts_weld_op = mp.RemoveDuplicateVerticesOp()

    # Fill potential mesh holes
    close_mesh_op = mp.CloseSmallHolesOp()
    # Refine CloseSmallHolesOp attribute
    close_mesh_op.max_hole_size = 10  # max hole's boundary vertices number to fill

    # Fix potential non-manifold edges and vertices
    manifoldness_op = mp.ResolveNonmanifoldnessOp()


**3/ Optimize mesh with decimation**

.. code-block:: python
    
    decimate_op = mp.DecimationOp()
    # Refine DecimationOp attributes
    decimate_op.max_facets = 2000  # target number of facets in the decimated mesh


**4/ Unwrap mesh UVs**

The Unwrap operator has two main modes: ``Default`` and ``HardEdge``.

While both modes perform well in most scenarios, the ``Default`` mode is generally better suited for organic meshes, whereas the ``HardEdge`` mode is optimized for hard-surface geometry.


*- Unwrapping using Default mode:*

.. code-block:: python

    # Seam and unwrap UVs
    unwrap_op = mp.UnwrapOp()
    # Refine UnwrapOp attributes
    unwrap_op.packing.padding_size = 0.002  # padding between islands in UV space
    # Make sure islands are not too much elongated (specific options for Default mode)
    unwrap_op.segmentation.chunks_elongation = 0.5
    unwrap_op.segmentation.elongation_threshold = 0.5

.. image:: /source/static/mesh_processing/meetmat_default.png
    :scale: 22 %
    :alt: Imported
.. image:: /source/static/mesh_processing/meetmat_default_uvs.png
    :scale: 25 %
    :alt: Unwrapped UVs Default Mode

*- Or Unwrapping using HardEdge mode:*

.. code-block:: python

    # Seam and unwrap UVs
    unwrap_op = mp.UnwrapOp()
    # Set Unwrap mode to HardEdge
    unwrap_op.mode = mp.UnwrapOp.Mode.HardEdge
    # Refine UnwrapOp attributes
    unwrap_op.packing.padding_size = 0.002  # padding between islands in UV space
    # Setting Hard Edge mode's specific segmentation options: 
    unwrap_op.segmentation.max_cluster_confidence = 0.97
    unwrap_op.segmentation.max_num_iterations = 7
    unwrap_op.segmentation.max_num_outliers = 1

.. image:: /source/static/mesh_processing/meetmat_triplanar.png
    :scale: 22 %
    :alt: Imported
.. image:: /source/static/mesh_processing/meetmat_triplanar_uvs.png
    :scale: 25 %
    :alt: Unwrapped UVs HardEdge Mode   
    
.. note::
    Unwrap Operator automatically packs UV after Unwrap.
    
    You may also have noticed above that the “default” and “hard edge” modes expose their own dedicated segmentation parameters:
    
    ``Default``:  
        - segmentation.chunks_elongation
        - segmentation.elongation_threshold
    ``HardEdge``:
        - segmentation.max_cluster_confidence
        - segmentation.max_num_iterations
        - segmentation.max_num_outliers


**5/ Compute mesh processing operators on the scene.**

.. code-block:: python

    mp.process(my_scene, [verts_weld_op, close_mesh_op, manifoldness_op, decimate_op, unwrap_op])

    # Export the processed asset scene to a new file
    export.fbx(my_scene, Path("mesh_output/processed_cad_file.fbx"))

.. note::
    Each operator is executed one after the other, following the specified order.


Mesh Processing results
-----------------------

**Decimation (right image) on the imported CAD file (left image):**

.. image:: /source/static/mesh_processing/grid_import.png
    :scale: 50 %
    :alt: Imported
.. image:: /source/static/mesh_processing/grid_decimation.png
    :scale: 50 %
    :alt: Decimated


**Unwrapped UVs after mesh decimation:**

.. image:: /source/static/mesh_processing/grid_unwrapped_uvs.jpg
    :scale: 50 %
    :alt: Unwrapped UVs


Processing Mesh Attributes and Mesh/Subtree Values
--------------------------------------------------

SSCA provides access to mesh and scene hierarchy values, including mesh and/or UV surface areas and edge length metrics.


These operators are divided into two categories:

- **Indexed mesh attribute**: Operates on each mesh, storing their relative processed values into their mesh attributes.

- **Global mesh/subtree values**: Operates on either an entire scene, a subtree, or a single mesh, returning their processed mesh values as a dictionary.

.. code-block:: python

    # Load a 1cm cube mesh 
    cube_file = Path("./meshes/cube.obj")
    main_scene = scene.new()
    mesh_group = primitive.xform(main_scene, "mesh_grp")
    scene.add_reference(mesh_group, cube_file)

    # Load values & attributes operators
    uv_area_op = mesh_processing.ComputeUVAreaOp()  # Global mesh/subtree value
    mesh_area_op = mesh_processing.ComputeMeshAreaOp()  # Global mesh/subtree value
    edge_lengths_op = mesh_processing.ComputeEdgeLengthsOp()  # Indexed mesh attribute

    # Process the scene with the operators and store mesh group subtree global values as dictionary
    processing_result = mesh_processing.process(mesh_group, [uv_area_op, mesh_area_op, edge_lengths_op])

    # Print mesh_group's values using the operator class's names as keys
    print(processing_result.get("ComputeUVAreaOp"))
    # >> 0.375
    print(processing_result.get("ComputeMeshAreaOp"))
    # >> 6.0

    # Get and print mesh's edge lengths attributes.
    cube_mesh = mesh_group.search(type='mesh')[0]
    edge_lengths = cube_mesh.primvars.edgeLengths.get()  # cube_mesh.<attribute_full_name>.get()
    print(edge_lengths)
    # >> [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]


.. note:: 

    After mesh is processed, its "primvars.edgeLengths" attribute can be found using: ``cube_mesh.inspect(display_values=True)``

    It will be printed among information like other attributes, metadata, etc. like this:  
    ``.primvars.edgeLengths : [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]``

    ``primvars.edgeLengths`` being the full name of the mesh attribute created by the ``ComputeEdgeLengthsOp`` operator.

Best Practices
--------------

* Chain **cleanup** operators (duplicates / degenerates / short edges) **before**
  algorithms sensitive to topology (``decimation``, ``remeshing``, ``subdivision``).
* Keep UV management steps (``UnwrapOp`` or ``RepackOp``) **after** topology edits to avoid
  invalidating UVs unnecessarily.
* Start with default attributes values, verify results with your renderer or
  mesh review and then edit operators attributes value as needed.
